traces/bug_718.txt
src/femlib/Mesh3dn.cpp:1240: error: DEAD_STORE
  The value written to &nve (type int) is never used.
Showing all 1 steps of the trace


src/femlib/Mesh3dn.cpp:1240:9: Write of unused value
1238.           typedef R3 Rd;
1239.           const Mesh3::Element & T(Th[it]);
1240.           const int nve = 4;
                ^
1241.           const Rd  Q[nve]={(const R3) T[0],(const R3) T[1],(const R3) T[2],(const R3) T[3]};
1242.           
